ADD intellij and grails